--- a/index.html
+++ b/index.html
@@ -20,6 +20,60 @@
             <section class="left-section">
                  <div class="left-content">
                     <!-- Write code for the left section here -->
+                     <div class="profile-details">
+                    <img class="profile-image" src="https://lh3.googleusercontent.com/IPxi00tuwc6agxxrzJN12X8gjW3i3e_flEr7Rdw2rZWYSD0erKDutBS4_o9s1-O-8cN2x9Ee1ljFjXtEDSb2BOo748IxGj1yJCgra3r9T_usb86nE_j4mBzlRM3L-gMs03k5NT9uw1s1cx67NqGxighJwe4AJpLc6e90AxPosHkKDXj4cFy7fSVuI-0Y4dwfiXJ3E5pY9C9yUHsxAyK4UKQeaNs5x59i_7S0aRAg3J_AQUVd9F-t4zhQl6KcsBEf-D_NkSVtu_vct3om8QDSkmJqDAbQz69Marb90OKDT7cGQhwi33W6bBTtEx865W921NTt70rxEy-UwDXq0EOEFq0KNUeFJjpXiiM8qgCp6kMZ6U3d5y7Xl0rbZz5WBwsEXUyt2RdiUeyFwRK4tMLbig3AYD40qtwVvFHg1k3Qg5aJz4wY-pgITwbyqD0Ad3Eqev46TYGud66g0YVCM0MiSKOr5SsPntUt-723cNuvMENMU4yce5YdOzohf_f_fdcHwuDuCfti9GYFcQiLJw6hjv3ZebdEyhcBRNXQvxOkmtjy8Jrp8Iz_aJA84wn9f0KPTKf1CIeE09Cf6a5CH5n50h4b7WMrvlJibsEsf7oAZ9DZ-_I1M14wCRiTYI8GLAp7NO2yeAPlnb2PTLCArpt83ekhC0cYz5N4JW2llnseVphghPeGgOKA5CBM6wAHSZHNDa-6cdyjPYnTch5CtG1snw2cGARNxhIpYLPW5r9aL6w9VjzS9IctXjjou3YzGHbgbm_1wecwsKdG6kdrZGpRZ5T1g5cH1309zsRf9I2zmkVlC8ehEl1PAsO6QGM6hGgR6wVWwFYayKpCZxERijvdqC-7CVdVm_wDLxJ3dECXCPVh46BtdpH8onAUSsKNVaUwXJkiN8WbZQJB3KRhbBFF-DuvcBx6Fg0C6AtBeRTUu-A5y4DGDw=w300-h649-no?authuser=0" alt="profile_image">
+                    <h2 class="name"> G THEJU PRASAD</h2>
+                    <h3 class="designation"> Web Developer</h3><hr>
+                    <h4 class="description"> Decide on the best technologies and languages for the project.</h4>               
+                </div> 
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <div class="personal-details">
+                            <ul>
+                                <li class="icon"><span><i class="fas fa-phone-alt"></i></span><span>&#9990;</span><span class="details"> +91 9014806242</span></li>
+                                
+                                <li class="icon"><span><i class="fas fa-at"></i></span><span>&#9993;</span><span class="details">tthejuprasad00@gmail.com</span></li>
+                                <li class="icon"><span><i class="fas fa-map-marker-alt"></i></span><span>&#10224;</span><span class="details">Chittoor,Andhra Pradesh </span></li>
+                            </ul>
+                        </div>                     
+                    </div>
+                </div> 
+                <div class="skills-title">
+                    <h2 class="skills"> Skills</h2>
+                    <div class="skills-content">
+                        <div class="skill-item">
+                            <div class="skill-name">
+                                <h3>HTML</h3>
+                            </div>
+                            <div class="skill-progress">
+                                <div class="progress-bar" style="width: 90%" ></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-name">
+                                <h3>CSS</h3>
+                            </div>
+                            <div class="skill-progress">
+                                <div class="progress-bar" style="width: 80%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-name">
+                                <h3>JAVASCRIPT</h3>
+                            </div>
+                            <div class="skill-progress">
+                                <div class="progress-bar" style="width: 40%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-name">
+                                <h3>JAVA</h3>
+                            </div>
+                            <div class="skill-progress">
+                                <div class="progress-bar" style="width: 40%"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             </section>
@@ -28,6 +82,88 @@
                 <div class="right-main-content">
                     
                     <!-- Write code for the right section here -->
+                    <section class="about sect">
+                    <h2 class="right-title"> About Me</h2>
+                    <p class="para">Front-end web developer with the experience of coding websites that convert in e-commerce. 
+                        Proficient with HTML, CSS, Javascript and React tag setup. 
+                        Most notably, improved the average time on page by 40% and improved user experience scores for all projects.</p>
+                </section><br>
+                <section class="education sect">
+                    <h2 class="right-title"> Education </h2>
+                    <div class="education-content"> 
+                        <div class="left_1">
+                            <div class="right_1">
+                                <h4>2017-2022</h4>
+                            </div>
+                            <h3> M.tech (Integrated software Engineering)</h3>    
+                            <h4>Vellore Institute of Technology-Chennai</h4>
+                            <h4>CGPA : 7.07 </h4>
+                            </div><br>                  
+                        <div class="left_2">
+                            <div class="right_2">
+                                <h4>2015-2017</h4>
+                            </div> 
+                            <h3>INTERMEDIATE</h3>     
+                            <h4>NRI ACADEMY</h4>
+                            <h4>Percentage : 92.9 %</h4>
+                            </div><br>       
+                        <div class="left_3">
+                            <div class="right_3">
+                                <h4>2015</h4>
+                            </div>    
+                            <h3>High-School</h3>
+                            <h4>CAMFORD ENGLISH HIGH SCHOOL,CHITTOOR</h4>
+                            <h4>CGPA : 9.3</h4>                          
+                        </div>
+                    </div>
+                </section><br>
+                <section class="experience sect">
+                    <h2 class="right-title"> Experience </h2>
+                    <div class="experience-section">
+                        <div class="left_4">
+                            <div class="right_4">
+                                <h4>Newton School</h4>
+                                <h4>AUGUST 2022 - till now</h4>
+                            </div> 
+                            <h3>Full-Stack Web Development</h3>     
+                            <h4>Data Structure and problem solving skills.</h4>
+                            <h4>Technical Stack : HTML, CSS,Javascript</h4>
+                            <h4>Bussiness Communication Skills</h4>
+                        </div>
+                    </div>
+                </section> <br>
+                <section class="project sect">
+                    <h2 class="right-title"> Projects </h2>
+                    <div class="project-section">
+                        <div class="left_5">
+                            <div class="right_5">
+                                <h4>Newton School</h4>
+                                <h4>November 2021</h4>
+                            </div> 
+                            <h3>Facebook Login Page</h3>                             
+                            <h4>Tech Stack : HTML, CSS</h4>                            
+                        </div>
+                    </div><br>
+                    <div class="project-section">
+                        <div class="left_6">
+                            <div class="right_6">
+                                <h4>Newton School</h4>
+                                <h4>November 2021</h4>
+                            </div> 
+                            <h3>Age Calculator</h3>                             
+                            <h4>Tech Stack : HTML, CSS,Javascript</h4>                          
+                        </div>
+                    </div><br>
+                    <div class="project-section">
+                        <div class="left_7">
+                            <div class="right_7">
+                                <h4>Newton School</h4>
+                                <h4>January 2022</h4>
+                            </div> 
+                            <h3>Calculator</h3>                               
+                            <h4>Tech Stack : React</h4>                           
+                        </div>
+                    </section>
                 </div>
             </section>
         </main>
