--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                  <div class="left-content">
                     <!-- Write code for the left section here -->
                      <div class="profile-details">
-                    <img class="profile-image" src="https://lh3.googleusercontent.com/IPxi00tuwc6agxxrzJN12X8gjW3i3e_flEr7Rdw2rZWYSD0erKDutBS4_o9s1-O-8cN2x9Ee1ljFjXtEDSb2BOo748IxGj1yJCgra3r9T_usb86nE_j4mBzlRM3L-gMs03k5NT9uw1s1cx67NqGxighJwe4AJpLc6e90AxPosHkKDXj4cFy7fSVuI-0Y4dwfiXJ3E5pY9C9yUHsxAyK4UKQeaNs5x59i_7S0aRAg3J_AQUVd9F-t4zhQl6KcsBEf-D_NkSVtu_vct3om8QDSkmJqDAbQz69Marb90OKDT7cGQhwi33W6bBTtEx865W921NTt70rxEy-UwDXq0EOEFq0KNUeFJjpXiiM8qgCp6kMZ6U3d5y7Xl0rbZz5WBwsEXUyt2RdiUeyFwRK4tMLbig3AYD40qtwVvFHg1k3Qg5aJz4wY-pgITwbyqD0Ad3Eqev46TYGud66g0YVCM0MiSKOr5SsPntUt-723cNuvMENMU4yce5YdOzohf_f_fdcHwuDuCfti9GYFcQiLJw6hjv3ZebdEyhcBRNXQvxOkmtjy8Jrp8Iz_aJA84wn9f0KPTKf1CIeE09Cf6a5CH5n50h4b7WMrvlJibsEsf7oAZ9DZ-_I1M14wCRiTYI8GLAp7NO2yeAPlnb2PTLCArpt83ekhC0cYz5N4JW2llnseVphghPeGgOKA5CBM6wAHSZHNDa-6cdyjPYnTch5CtG1snw2cGARNxhIpYLPW5r9aL6w9VjzS9IctXjjou3YzGHbgbm_1wecwsKdG6kdrZGpRZ5T1g5cH1309zsRf9I2zmkVlC8ehEl1PAsO6QGM6hGgR6wVWwFYayKpCZxERijvdqC-7CVdVm_wDLxJ3dECXCPVh46BtdpH8onAUSsKNVaUwXJkiN8WbZQJB3KRhbBFF-DuvcBx6Fg0C6AtBeRTUu-A5y4DGDw=w300-h649-no?authuser=0" alt="profile_image">
+                    <img class="profile-image" src="" alt="profile_image">
                     <h2 class="name"> G THEJU PRASAD</h2>
                     <h3 class="designation"> Web Developer</h3><hr>
                     <h4 class="description"> Decide on the best technologies and languages for the project.</h4>               
