--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                  <div class="left-content">
                     <!-- Write code for the left section here -->
                      <div class="profile-details">
-                    <img class="profile-image" src="" alt="profile_image">
+                    <img class="profile-image" src="e7760705b501b476979a9c38064dd75b-01.jpg" alt="profile_image">
                     <h2 class="name"> G THEJU PRASAD</h2>
                     <h3 class="designation"> Web Developer</h3><hr>
                     <h4 class="description"> Decide on the best technologies and languages for the project.</h4>               
